--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
       <div class="row">
         <div class="col-lg-6">
           <h1 class="mt-5">Ramou Jallow</h1>
-          <p>Welcome to my first website!</p>
+          <p>Welcome to my online resume portfolio!</p>
         </div>
       </div>
     </div>
