--- a/index.html
+++ b/index.html
@@ -111,13 +111,12 @@
                         <li class="list-inline-item"><i class="fab fa-html5"></i></li>
                         <li class="list-inline-item"><i class="fab fa-css3-alt"></i></li>
                         <li class="list-inline-item"><i class="fab fa-java"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-ruby"></i></li>
                     </ul>
                     <div class="subheading mb-3">Soft Skills</div>
                     <ul class="fa-ul mb-0">
                         <li>
                             <span class="fa-li"><i class="fas fa-check"></i></span>
-                            Team Management, Public Speaking
+                            Team Management & Public Speaking
                         </li>
                         <li>
                             <span class="fa-li"><i class="fas fa-check"></i></span>
