--- a/index.html
+++ b/index.html
@@ -29,8 +29,7 @@
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#experience">Education</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#education">Experience</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#skills">Skills</a></li>
-                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#interests">Projects</a></li>
-                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#awards">Interests</a></li>
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#interests">Interests</a></li>
                 </ul>
             </div>
         </nav>
