--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#experience">Education</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#education">Experience</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#skills">Skills</a></li>
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#projects">Projects</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#interests">Interests</a></li>
                 </ul>
             </div>
@@ -130,6 +131,22 @@
                             Organization & Communication
                         </li>
                     </ul>
+                </div>
+            </section>
+            <hr class="m-0" />
+            <!-- Projects-->
+            <section class="resume-section" id="projects">
+                <div class="resume-section-content">
+                    <h2 class="mb-5">Projects</h2>
+                    <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+                        <div class="flex-grow-1">
+                            <h3 class="mb-0">Project Title</h3>
+                            <div class="subheading mb-3">Skills Used:</div>
+                            <div>This is what I did!</div>
+                            <p>Anything to add?</p>
+                        </div>
+                        <div class="flex-shrink-0"><span class="text-primary">Month Year - Month Year</span></div>
+                    </div>
                 </div>
             </section>
             <hr class="m-0" />
