--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
                 <div class="resume-section-content">
                     <h2 class="mb-5">Interests</h2>
                     <p>Apart from being a college student, I enjoy most of my time traveling and being outdoors. In the winter, I road trip all around Washington. During the warmer months here in Seattle, I enjoy paddleboarding, swimming at the lake, and hiking.</p>
-                    <p class="mb-0">When fored indoors, I spend most of my time filming and editing videos for my Youtube Channel, and developing new app and website ideas. You can also find me at the crack of dawn at a nearby lake practicing yoga and meditation!</p>
+                    <p class="mb-0">When forced indoors, I spend most of my time filming and editing videos for my Youtube Channel, and developing new app and website ideas. You can also find me at the crack of dawn at a nearby lake practicing yoga and meditation!</p>
                 </div>
             </section>
             <hr class="m-0" />
