--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                         <span class="text-primary">Jallow</span>
                     </h1>
                     <div class="subheading mb-5">
-                        Seattle, WA · <a href="mailto:name@email.com">ramouj@uw.edu</a>
+                        Seattle, WA · <a href="mailto:name@email.com">ramouj17@gmail.com</a>
                     </div>
                     <p class="lead mb-5"> Enthusiastic student experienced in strategically leading group projects, evaluating team progress, and effectively communicating with multiple audiences.</p>
                     <div class="social-icons">
