Update 'experiences' section

--- a/index.html
+++ b/index.html
@@ -46,7 +46,9 @@
                     <div class="subheading mb-5">
                         Seattle, WA · <a href="mailto:name@email.com">ramouj17@gmail.com</a>
                     </div>
-                    <p class="lead mb-5"> Enthusiastic student experienced in strategically leading group projects, evaluating team progress, and effectively communicating with multiple audiences.</p>
+                    <p class="lead mb-5">Young professional with an infectious enthusiasm to explore and learn
+                        something new every day whilst building robust, dynamic, and inclusive software 
+                    </p>
                     <div class="social-icons">
                         <a class="social-icon" href="https://www.linkedin.com/in/ramoujallow/"><i class="fab fa-linkedin-in"></i></a>
                         <a class="social-icon" href="https://github.com/ramouj"><i class="fab fa-github"></i></a>
@@ -61,27 +63,36 @@
                     <h2 class="mb-5">Experience</h2>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
-                            <h3 class="mb-0">Campus Representative</h3>
-                            <div class="subheading mb-3">Apple</div>
-                            <p>Raised awareness of the Apple Campus Store by contributing to record sales during the back-to-school season. Collaborated with Campus Reps across the nation to understand marketing trends and techniques at the university level. Discovered areas of growth, then pushed initiatives and planned events based on needs and goals. Developed and maintained strong customer relationships with campus affiliates.</p>
+                            <h3 class="mb-0">Software Engineer</h3>
+                            <div class="subheading mb-3">American Express</div>
+                            <p> Currently, I'm building out an integration with an internal tool (responsible for managing our data applications on Hadoop & real-time processes) and our enterprise framework for real time events and message processing. Overall, I contribute to the design, development, troubleshooting, debugging, evaluating, modifying, deploying, and documenting software and systems that meet the needs of business and internal end user applications! </p>
                         </div>
-                        <div class="flex-shrink-0"><span class="text-primary">May 2019 - May 2020</span></div>
+                        <div class="flex-shrink-0"><span class="text-primary">December 2021 to Present</span></div>
+                    </div>
+                    <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+                        <div class="flex-grow-1">
+                            <h3 class="mb-0">Software Engineer Intern</h3>
+                            <div class="subheading mb-3">Disney</div>
+                            <p> I wrote automation scripts used for synthetic monitoring to ensure the health of our applications and servers. I created a single page web application for WDW security to look up employees in access control. </p>
+                        </div>
+                        <div class="flex-shrink-0"><span class="text-primary">June 2021 to September 2021</span></div>
+                    </div>
+                    <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+                        <div class="flex-grow-1">
+                            <h3 class="mb-0">Junior Account Executive</h3>
+                            <div class="subheading mb-3">Apple</div>
+                            <p>I executed campaigns and events to increase awareness of our Campus Store and contributed to record sales during the back-to-school season. I also collaborated with account executives across the nation to understand marketing trends and techniques at the university level.
+                            </p>
+                        </div>
+                        <div class="flex-shrink-0"><span class="text-primary">May 2019 to May 2020</span></div>
                     </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
                             <h3 class="mb-0">Software Engineer Intern</h3>
                             <div class="subheading mb-3">Microsoft</div>
-                            <p>Facilitated a program that generated an automatic tracker for bugs in our GitHub repository and alerted the owner when issues needed to be resolved. Increased team productivity by reducing 38% of the bugs in our GitHub repository over 4 months. Utilized Go, C#, JSON, and Jenkins to automate the tracker.</p>
+                            <p>Increased team productivity by reducing 38% of the bugs in our GitHub repository over 4 months and implementing an automated tracker for the issues in our repo. </p>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">June 2017 - September 2017</span></div>
-                    </div>
-                    <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
-                        <div class="flex-grow-1">
-                            <h3 class="mb-0">Solutions and Scale Apprentice</h3>
-                            <div class="subheading mb-3">Microsoft</div>
-                            <p>Used Power BI, Excel, and conducted data analytics to measure customer interaction on promotional materials.</p>
-                        </div>
-                        <div class="flex-shrink-0"><span class="text-primary">August 2015 - June 2016</span></div>
                     </div>
                 </div>
             </section>
