--- a/index.html
+++ b/index.html
@@ -105,8 +105,15 @@
                         <div class="flex-grow-1">
                             <h3 class="mb-0">University of Washington</h3>
                             <div class="subheading mb-3">Bachelor of Science</div>
-                            <div>Geographic Information Systems - Data Science Track</div>
+                            <div>Data Science</div>
                             <p>Minor: Informatics</p>
+                            <p>Extra-curricular Activities</p>
+                            <ul class="activities">
+                                <li>TUNE House Scholar Recipient 2018-2019 </li>
+                                <li>Society of Women Engineers (SWE) member 2018-2021</li>
+                                <li>National Society of Black Engineers (NSBE) member 2017-2021</li>
+                                <li>Techbridge girls mentor 2019</li>
+                            </ul>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">September 2017 - June 2021</span></div>
                     </div>
@@ -122,20 +129,19 @@
                         <li class="list-inline-item"><i class="fab fa-html5"></i></li>
                         <li class="list-inline-item"><i class="fab fa-css3-alt"></i></li>
                         <li class="list-inline-item"><i class="fab fa-java"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-python"></i></li>
+                        <li class="list-inline-item"><i class="fa-brands fa-linux"></i></li>
                         <li class="list-inline-item"><i class="fab fa-js-square"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-bootstrap"></i></li>
-                        
+                        <li class="list-inline-item"><i class="fa-brands fa-r-project"></i></li>  
                     </ul>
                     <div class="subheading mb-3">Soft Skills</div>
                     <ul class="fa-ul mb-0">
                         <li>
                             <span class="fa-li"><i class="fas fa-check"></i></span>
-                            Team Management & Public Speaking
+                            Public Speaking & Presentations
                         </li>
                         <li>
                             <span class="fa-li"><i class="fas fa-check"></i></span>
-                            Conflict Management & Problem Solving
+                            Conflict Management & Resolution
                         </li>
                         <li>
                             <span class="fa-li"><i class="fas fa-check"></i></span>
@@ -151,12 +157,97 @@
                     <h2 class="mb-5">Projects</h2>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
-                            <h3 class="mb-0">Project Title</h3>
-                            <div class="subheading mb-3">Skills Used:</div>
-                            <div>This is what I did!</div>
-                            <p>Anything to add?</p>
+                            <h3 class="mb-0">Web Portfolio</h3>
+                            <div class="subheading mb-3">Skills Used: HTML, CSS, Bootstrap</div>
+                            <p>I used a bootstrap HTML template as the basis of my portfolio design. I then stored my source code in a Github repo & deployed a github-page to allow external users such as yourself to view my portfolio.</p>
                         </div>
-                        <div class="flex-shrink-0"><span class="text-primary">Month Year - Month Year</span></div>
+                        <div class="flex-shrink-0"><span class="text-primary">January 2021 - Current</span>
+                        </div>
+                    </div>
+                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+                        <div class="flex-grow-1">
+                            <h3 class="mb-0">Mapping Police Violence in Seattle</h3>
+                            <div class="subheading mb-3">Skills Used: HTML, CSS, Leaflet, Data Extraction & Analysis</div>
+                            <p>The web map I created features data from law enforcement agencies around the state, and shows the number of police killings in the Pacific Northwest from January 2013 to March 2021.</p>
+                            <a href="https://github.com/RamouJ/Mapping-Police-Violence-in-Seattle">https://github.com/RamouJ/Mapping-Police-Violence-in-Seattle</a>
+                        </div>
+                        <div class="flex-shrink-0"><span class="text-primary">February 2021</span>
+                        </div>
+                    </div>
+                    <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+                        <div class="flex-grow-1">
+                            <h3 class="mb-0">Generating Map Tiles</h3>
+                            <div class="subheading mb-3">Skills Used: HTML, Leaflet, MapBox, QGIS</div>
+                            <p>I generated 4 flavors of map tiles using QGIS and plotted data on two of them about 911 calls across the Seattle metro area. I added details using Leaflet and hosted the interactive maps on Github pages.</p>
+                            <a href="https://github.com/RamouJ/Map-Tile-Generation">https://github.com/RamouJ/Map-Tile-Generation</a>
+                        </div>
+                        <div class="flex-shrink-0"><span class="text-primary">February 2021</span>
+                        </div>
+                    </div>
+                    <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+                        <div class="flex-grow-1">
+                            <h3 class="mb-0">Airport Web Map</h3>
+                            <div class="subheading mb-3">Skills Used: JavaScript, HTML, CSS, Leaflet</div>
+                            <p>I created an interactive choropleth map based on the number of airports within each state. There are also markers signifiying whether or not each airport is equipped with a control tower.</p>
+                            <a href="https://github.com/RamouJ/Airport-Web-Map">https://github.com/RamouJ/Airport-Web-Map</a>
+                        </div>
+                        <div class="flex-shrink-0"><span class="text-primary">February 2021</span>
+                        </div>
+                    </div>
+                    <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+                        <div class="flex-grow-1">
+                            <h3 class="mb-0">Geo-tagged Tweets</h3>
+                            <div class="subheading mb-3">Skills Used: Python, Jupyter Notebook, Twitter API</div>
+                            <p>I designed a map of geo-tagged twitter data that was harvested using an API-based Crawler. A python based library, tweepy, was used to filter tweets through the keyword 'blm', which provides data that gives you insight into the public perception of the black lives matter movement.</p>
+                            <a href="https://github.com/RamouJ/Geo-tagged-Tweets">https://github.com/RamouJ/Geo-tagged-Tweets</a>
+                        </div>
+                        <div class="flex-shrink-0"><span class="text-primary">January 2021</span>
+                        </div>
+                    </div>
+                    <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+                        <div class="flex-grow-1">
+                            <h3 class="mb-0">Data Analysis Visualization</h3>
+                            <div class="subheading mb-3">Skills Used: Python, Jupyter Notebook, Data Analysis & Visualization</div>
+                            <p>This repo holds a collection of scripts I coded in Python during my introduction to data science course! I I also included the .csv files used to complete the analysis should you choose to take a stab at it yourself.</p>
+                            <a href="https://github.com/RamouJ/Data-Analysis-Visualization">https://github.com/RamouJ/Data-Analysis-Visualization</a>
+                        </div>
+                        <div class="flex-shrink-0"><span class="text-primary">December 2019</span>
+                        </div>
+                    </div>
+                     <div class="flex-grow-1">
+                            <h3 class="mb-0">Forestry Data Application</h3>
+                            <div class="subheading mb-3">Data Analysis & Visualization, R programming language</div>
+                            <p>This app my team and I created, takes two datasets from an experiment done by the NOAA on various coral reef sites in the Caribbean area. The data focuses on trying to mitigate the spread of white band disease on the coral reefs and this app compares two of the data sets from the experiment and analysizes the effectiveness of the various treatments for the disease as well as why the disease has been detered or not.</p>
+                            <a href="https://ramouj.shinyapps.io/Info201-Final_Northern-Stark/">https://ramouj.shinyapps.io/Info201-Final_Northern-Stark/</a>
+                             <a href="https://github.com/RamouJ/info201-final-project-tns/">https://github.com/RamouJ/info201-final-project-tns</a>
+                        </div>
+                        <div class="flex-shrink-0"><span class="text-primary"> March 2019</span>
+                        </div>
+                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+                        <div class="flex-grow-1">
+                            <h3 class="mb-0">Branding the town of Nafplio, Greece</h3>
+                            <div class="subheading mb-3">Program Management, Web Design, User Research</div>
+                            <p>As a students from the University of Washington, I traveled to Greece on a summer-long study abroad program that focused on studying social justice abroad. Shortly after arriving to Nafplio, we started a project hoping to brand the city in a way that would attract more tourists. Our ultimate goal was to draw in as many people as possible while staying true to the program's focus on social justice in Greece. I took on the role of project manager by making sure that everyone worked cohesivley and had deadlines to meet. I also lead & put together the design of the website we created, which can be found in the link below and on Instagram @thisisnafplio.</p>
+                            <a href="https://thisisnafplio.weebly.com/">https://thisisnafplio.weebly.com/</a>
+                        </div>
+                          <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+                        <div class="flex-grow-1">
+                            <h3 class="mb-0">Forestry Data Application</h3>
+                            <div class="subheading mb-3">Data Analysis & Visualization, R programming language</div>
+                            <p>I used R and data from the World Bank to explore a data set about forest area. The visualizations analyze the changes in forestry levels over time, as well as how different factors have impacted the forestry levels all over the world.</p>
+                            <a href="https://ramouj.shinyapps.io/a8-data-app-RamouJ/">https://ramouj.shinyapps.io/a8-data-app-RamouJ/</a>
+                        </div>
+                        <div class="flex-shrink-0"><span class="text-primary"> May 2018</span>
+                        </div>
+                        <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+                        <div class="flex-grow-1">
+                            <h3 class="mb-0">Ready, Set, Flow</h3>
+                            <div class="subheading mb-3">Skills Used: JavaScript, HTML, CSS, Leaflet</div>
+                            <p>As a group in my Social Impact Informatics class, we decided to focus on menstrual education. We worked on making the talk of the flow, flow a little bit easier. Many young women around the world have little to no education about their menstrual cycle before it arrives. We proposed a solution to help young women start their path to womanhood. Having a period shouldn’t be treated as an inconvenience, and learning about it shouldn’t be either.</p>
+                            <a href="https://myreadysetflow.weebly.com/">https://myreadysetflow.weebly.com/</a>
+                        </div>
+                        <div class="flex-shrink-0"><span class="text-primary">June 2018</span>
+                        </div>
                     </div>
                 </div>
             </section>
@@ -165,7 +256,7 @@
             <section class="resume-section" id="interests">
                 <div class="resume-section-content">
                     <h2 class="mb-5">Interests</h2>
-                    <p>Apart from being a college student, I enjoy most of my time traveling and being outdoors. In the winter, I road trip all around Washington. During the warmer months here in Seattle, I enjoy paddleboarding, swimming at the lake, and hiking.</p>
+                    <p>Apart from being a college student, I enjoy most of my time traveling and being outdoors. I've traveled internationall almost every year since starting college. In the winter, I road trip all around Washington. During the warmer months here in Seattle, I enjoy paddleboarding, swimming at the lake, and hiking.</p>
                     <p class="mb-0">When forced indoors, I spend most of my time filming and editing videos for my Youtube Channel, and developing new app and website ideas. You can also find me at the crack of dawn at a nearby lake practicing yoga and meditation!</p>
                 </div>
             </section>
