--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
                             <div class="subheading mb-3">Bachelor of Science</div>
                             <div>Data Science</div>
                             <p>Minor: Informatics</p>
-                            <p>Extra-curricular Activities</p>
+                            <p>Extra-curricular Activities:</p>
                             <ul class="activities">
                                 <li>TUNE House Scholar Recipient 2018-2019 </li>
                                 <li>Society of Women Engineers (SWE) member 2018-2021</li>
