--- a/index.html
+++ b/index.html
@@ -211,43 +211,44 @@
                             <p>This repo holds a collection of scripts I coded in Python during my introduction to data science course! I I also included the .csv files used to complete the analysis should you choose to take a stab at it yourself.</p>
                             <a href="https://github.com/RamouJ/Data-Analysis-Visualization">https://github.com/RamouJ/Data-Analysis-Visualization</a>
                         </div>
-                        <div class="flex-shrink-0"><span class="text-primary">December 2019</span>
-                        </div>
+                        <div class="flex-shrink-0"><span class="text-primary">December 2019</span></div>
                     </div>
-                     <div class="flex-grow-1">
-                            <h3 class="mb-0">Forestry Data Application</h3>
-                            <div class="subheading mb-3">Data Analysis & Visualization, R programming language</div>
+                      <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+                        <div class="flex-grow-1">
+                            <h3 class="mb-0">CORAL REEF ANALYSIS & VISUALIZATION</h3>
+                            <div class="subheading mb-3">Skills Used: DATA ANALYSIS & VISUALIZATION, R PROGRAMMING LANGUAGE</div>
                             <p>This app my team and I created, takes two datasets from an experiment done by the NOAA on various coral reef sites in the Caribbean area. The data focuses on trying to mitigate the spread of white band disease on the coral reefs and this app compares two of the data sets from the experiment and analysizes the effectiveness of the various treatments for the disease as well as why the disease has been detered or not.</p>
                             <a href="https://ramouj.shinyapps.io/Info201-Final_Northern-Stark/">https://ramouj.shinyapps.io/Info201-Final_Northern-Stark/</a>
-                             <a href="https://github.com/RamouJ/info201-final-project-tns/">https://github.com/RamouJ/info201-final-project-tns</a>
+                            <a href="https://github.com/RamouJ/info201-final-project-tns">https://github.com/RamouJ/info201-final-project-tns</a>
                         </div>
-                        <div class="flex-shrink-0"><span class="text-primary"> March 2019</span>
-                        </div>
-                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+                        <div class="flex-shrink-0"><span class="text-primary">March 2019</span></div>
+                    </div>
+                      <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
-                            <h3 class="mb-0">Branding the town of Nafplio, Greece</h3>
-                            <div class="subheading mb-3">Program Management, Web Design, User Research</div>
+                            <h3 class="mb-0">BRANDING THE TOWN OF NAFPLIO, GREECE</h3>
+                            <div class="subheading mb-3">Skills Used: PROGRAM MANAGEMENT, WEB DESIGN, USER RESEARCH</div>
                             <p>As a students from the University of Washington, I traveled to Greece on a summer-long study abroad program that focused on studying social justice abroad. Shortly after arriving to Nafplio, we started a project hoping to brand the city in a way that would attract more tourists. Our ultimate goal was to draw in as many people as possible while staying true to the program's focus on social justice in Greece. I took on the role of project manager by making sure that everyone worked cohesivley and had deadlines to meet. I also lead & put together the design of the website we created, which can be found in the link below and on Instagram @thisisnafplio.</p>
-                            <a href="https://thisisnafplio.weebly.com/">https://thisisnafplio.weebly.com/</a>
+                            <a href="https://thisisnafplio.weebly.com/">hhttps://thisisnafplio.weebly.com/</a>
                         </div>
-                          <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+                        <div class="flex-shrink-0"><span class="text-primary">August 2018</span></div>
+                    </div>
+                      <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
-                            <h3 class="mb-0">Forestry Data Application</h3>
-                            <div class="subheading mb-3">Data Analysis & Visualization, R programming language</div>
-                            <p>I used R and data from the World Bank to explore a data set about forest area. The visualizations analyze the changes in forestry levels over time, as well as how different factors have impacted the forestry levels all over the world.</p>
+                            <h3 class="mb-0">FORESTRY DATA APPLICATION</h3>
+                            <div class="subheading mb-3">Skills Used: Python, Jupyter Notebook, Data Analysis & Visualization</div>
+                            <p>I used R and data from the World Bank to explore a data set about forest area. The visualizations analyze the changes in forestry levels over time, as well as how different factors have impacted the forestry levels all over the world</p>
                             <a href="https://ramouj.shinyapps.io/a8-data-app-RamouJ/">https://ramouj.shinyapps.io/a8-data-app-RamouJ/</a>
                         </div>
-                        <div class="flex-shrink-0"><span class="text-primary"> May 2018</span>
-                        </div>
-                        <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+                        <div class="flex-shrink-0"><span class="text-primary">May 2018</span></div>
+                    </div>
+                      <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
-                            <h3 class="mb-0">Ready, Set, Flow</h3>
-                            <div class="subheading mb-3">Skills Used: JavaScript, HTML, CSS, Leaflet</div>
+                            <h3 class="mb-0">READY, SET, FLOW</h3>
+                            <div class="subheading mb-3">SKILLS USED: JAVASCRIPT, HTML, CSS, LEAFLET</div>
                             <p>As a group in my Social Impact Informatics class, we decided to focus on menstrual education. We worked on making the talk of the flow, flow a little bit easier. Many young women around the world have little to no education about their menstrual cycle before it arrives. We proposed a solution to help young women start their path to womanhood. Having a period shouldn’t be treated as an inconvenience, and learning about it shouldn’t be either.</p>
                             <a href="https://myreadysetflow.weebly.com/">https://myreadysetflow.weebly.com/</a>
                         </div>
-                        <div class="flex-shrink-0"><span class="text-primary">June 2018</span>
-                        </div>
+                        <div class="flex-shrink-0"><span class="text-primary">December 2019</span></div>
                     </div>
                 </div>
             </section>
