--- a/index.html
+++ b/index.html
@@ -244,7 +244,7 @@
                       <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
                             <h3 class="mb-0">READY, SET, FLOW</h3>
-                            <div class="subheading mb-3">SKILLS USED: JAVASCRIPT, HTML, CSS, LEAFLET</div>
+                            <div class="subheading mb-3">SKILLS USED: USER RESEARCH, PROGRAM MANAGEMENT, WEB DESIGN</div>
                             <p>As a group in my Social Impact Informatics class, we decided to focus on menstrual education. We worked on making the talk of the flow, flow a little bit easier. Many young women around the world have little to no education about their menstrual cycle before it arrives. We proposed a solution to help young women start their path to womanhood. Having a period shouldn’t be treated as an inconvenience, and learning about it shouldn’t be either.</p>
                             <a href="https://myreadysetflow.weebly.com/">https://myreadysetflow.weebly.com/</a>
                         </div>
