fix: fixed typos

--- a/index.html
+++ b/index.html
@@ -266,8 +266,8 @@
     <section class="resume-section" id="interests">
         <div class="resume-section-content">
             <h2 class="mb-5">Interests</h2>
-            <p>Apart from being a college student, I enjoy most of my time traveling and being outdoors. I've traveled internationall almost every year since starting college. In the winter, I road trip all around Washington. During the warmer months here in Seattle, I enjoy paddleboarding, swimming at the lake, and hiking.</p>
-            <p class="mb-0">When forced indoors, I spend most of my time filming and editing videos for my Youtube Channel, and developing new app and website ideas. You can also find me at the crack of dawn at a nearby lake practicing yoga and meditation!</p>
+            <p>Apart from being a college student, I enjoy most of my time traveling and being outdoors. I've traveled internationally almost every year since starting college. In the winter, I love to road trip all around Washington. During the warmer months here in Seattle, I enjoy paddle-boarding, swimming at the lake, and hiking.</p>
+            <p class="mb-0">When forced indoors, I spend most of my time filming and editing videos for my YouTube Channel, and curating new app or website ideas. You can also find me at the crack of dawn at a nearby lake practicing yoga and meditation!</p>
         </div>
     </section>
     <hr class="m-0" />
