fix: improved working for skills section

--- a/index.html
+++ b/index.html
@@ -151,11 +151,11 @@
             <br>
             <div class="subheading mb-3">Engineering Practices</div>
             <ul class="engineering-practices">
-                <li>Develop microservices within an event-driven & distributed architectural environment</li>
-                <li>API test automation using Postman</li>
-                <li>Functional, performance, and production test support + root cause analysis for code defect remediation</li>
+                <li>Developed microservices within an event-driven & distributed architectural environment</li>
+                <li>Automated API tests using JSON scripts in Postman</li>
                 <li>Automated deployments via CI/CD pipelines</li>
-                <li>Agile application development</li>
+                <li>Provided functional, performance, and production test support, & participated in root cause analysis for code defect remediation</li>
+                <li>Functioned within an Agile methodology ecosystem</li>
             </ul>
         </div>
     </section>
